# Globelisebackend

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  deny.toml  postman.json
.gitlab/ci/: test.yml
common-utils/: Cargo.toml
common-utils/src/: custom_serde.rs  error.rs  lib.rs  pubsub.rs  token.rs
common-utils/src/database/: bulk_add.rs  client_contractor_pair.rs  contract.rs  mod.rs  notification.rs  user.rs
common-utils/src/database/onboard/: bank.rs  entity.rs  individual.rs  mod.rs  payment.rs  pic.rs
common-utils/src/database/prefill/: account.rs  bank.rs
contractor-management-microservice/: .env.example  .gitignore  Cargo.toml  README.md  postman.json
contractor-management-microservice/components/: pub_sub.yaml  state_store.yaml
contractor-management-microservice/migrations/: 20220410045221_initial.sql  20220412041506_client_contractor_pair.sql  20220424145914_use_join_instead_of_left_join.sql  20220510090328_add_branch_column_to_contracts.sql  20220511054239_use_left_join_for_contracts_index.sql  20220511230155_user_left_join_for_payslips.sql  20220512032707_drop_client_contractor_pair_constraint.sql
contractor-management-microservice/sql/: dump.sql
contractor-management-microservice/src/: common.rs  database.rs  env.rs  error.rs  main.rs  state.rs
contractor-management-microservice/src/auth/token/: mod.rs
contractor-management-microservice/src/client_contractor_pair/: mod.rs
contractor-management-microservice/src/contracts/: database.rs  mod.rs
contractor-management-microservice/src/invoice/: database.rs  mod.rs
contractor-management-microservice/src/microservices/: user_management.rs
contractor-management-microservice/src/payslips/: database.rs  mod.rs
contractor-management-microservice/src/pubsub/: mod.rs
contractor-management-microservice/src/tax_report/: database.rs  mod.rs
eor-admin-microservice/: .env.example  .gitignore  Cargo.toml  README.md  postman.json
eor-admin-microservice/migrations/: 20220410045100_initial.sql
eor-admin-microservice/sql/: dump.sql
eor-admin-microservice/src/: database.rs  env.rs  error.rs  lib.rs  main.rs  token.rs
eor-admin-microservice/src/auth/: admin.rs  google.rs  mod.rs  state.rs
eor-admin-microservice/src/auth/password/reset/: mod.rs
eor-admin-microservice/src/auth/token/: mod.rs  one_time.rs
eor-admin-microservice/src/database/: auth.rs  mod.rs  onboard.rs
eor-admin-microservice/src/onboard/: individual.rs  mod.rs  multipart.rs  util.rs
google/: Cargo.toml
google_auth/: Cargo.toml
google_auth/src/: error.rs  lib.rs
integration-tests/: index.ts  jest.config.ts  package-lock.json  package.json
migrations/: 20220525055208_init_currency_codes.sql  20220525055249_init_country_codes.sql  20220525055537_users.sql  20220525063422_contractor_client_pair.sql  20220525074353_entity_clients_account_details.sql  20220525074513_entity_clients_pic_details.sql  20220525074545_entity_contractors_account_details.sql  20220525074621_entity_contractors_bank_details.sql  20220525074733_entity_contractors_pic_details.sql  20220525074755_individual_clients_account_details.sql  20220525074842_individual_contractors_account_details.sql  20220525074923_individual_contractors_bank_details.sql  20220525075014_onboard_entity_clients.sql  20220525075126_onboard_entity_contractors.sql  20220525075338_onboard_individual_clients.sql  20220525075406_onboard_individual_contractors.sql  20220525075509_onboarded_users.sql  20220525075851_contractor_index.sql  20220525075916_client_index.sql  (+87 more)
user-management-microservice/: .env.example  .gitignore  API.md  Cargo.toml  README.md  deny.toml  postman.json
user-management-microservice/components/: admin_ids.yaml  admins.yaml  client_entities.yaml  client_ids.yaml  client_individuals.yaml  contractor_entities.yaml  contractor_ids.yaml  contractor_individuals.yaml  one_time_change_password.yaml  one_time_google.yaml  one_time_lost_password.yaml  pub_sub.yaml  sessions.yaml  state_store.yaml
user-management-microservice/migrations/: 20220410045143_initial.sql  20220411022705_contractor_client_pair.sql  20220416111157_eor-admin-prefilled-client-onboarding-tables.sql  20220417230643_add_branch_details.sql  20220424150100_use_join_instead_of_left_join.sql  20220424150223_fix_branch_related_tables.sql  20220425031657_departments_table.sql  20220425032351_modify_updated_at_rows.sql  20220426032349_custom_fields_table.sql  20220427191209_CreatePayItemsTable.sql  20220428024732_add_contractor_branch_pairs.sql  20220428200815_AddCascadeDeleteToTablesReferencingEntityClientBranches.sql  20220509111817_prefill_individual_contractor_details_for_bulk_upload.sql  20220510103856_AddSearchEmployeeContractorView.sql  20220511080755_EntityContractorBranchPairsTable.sql  20220511230916_fix_prefill_column_type.sql  20220519024712_make_prefill_account_and_bank_client_ulid_column_optional.sql  20220519075659_update_users_index_to_include_client_contractor_bool.sql  20220522090141_introduce_country_table.sql  20220522093550_introduce_currency_table.sql  20220522093842_introduce_sap_mulesoft_payroll_journal_for_s4hana.sql
user-management-microservice/sql/: dump.sql
user-management-microservice/src/: database.rs  env.rs  error.rs  lib.rs  main.rs  token.rs  user.rs  user_index.rs
user-management-microservice/src/auth/: database.rs  error.rs  google.rs  mod.rs  onboarding.rs  password.rs  password_reset.rs  state.rs  token.rs  user.rs
user-management-microservice/src/auth/onboarding/: bank.rs  entity.rs  eor.rs  individual.rs  multipart.rs
user-management-microservice/src/auth/password/reset/: change_password.rs  mod.rs  token.rs
user-management-microservice/src/auth/token/: change_password.rs  lost_password.rs  mod.rs  one_time.rs
user-management-microservice/src/database/: auth.rs  mod.rs  onboard.rs  prefill_onboard.rs
user-management-microservice/src/eor_admin/: mod.rs
user-management-microservice/src/info/: mod.rs
user-management-microservice/src/onboard/: bank.rs  entity.rs  eor.rs  individual.rs  mod.rs  multipart.rs  prefill.rs  util.rs
(+3 files in other folders)
