[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
http-cache-reqwest = { version = "0.3.0", features = ["manager-moka"], default-features = false }
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
reqwest = "0.11.9"
reqwest-middleware = "0.1.5"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
strum = { version = "0.24.0", features = ["derive"] }
time = { version = "0.3.7", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["full"] }
image = "0.24.1"