[package]
name = "common-utils"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1", features = ["headers"] }
http-cache-reqwest = { version = "0.4.1", features = ["manager-moka"], default-features = false }
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
reqwest = "0.11.10"
reqwest-middleware = "0.1.5"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "decimal"] }
strum = { version = "0.24.0", features = ["derive"] }
time = { version = "0.2.27" }
tokio = { version = "1.17.0", features = ["full"] }
image = "0.24.1"
email_address = "0.2.1"
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["base64"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
