[package]
name = "contractor-management-microservice"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.8", features = ["headers", "multipart"] }
dapr = "0.7.2"
dotenv = "0.15.0"
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
rusty_ulid = { version = "1.0.0", features = ["ulid-generation-time", "serde"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = { version = "1.12.0", features = ["base64"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "decimal"] }
strum = { version = "0.24.0", features = ["derive"] }
time = "0.3.7"
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.5.2"
tower = { version = "0.4.12", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.4", features = ["add-extension", "cors"] }
unicode-normalization = "0.1.19"



# Microservices SDK
user-management-microservice = { path = "../user-management-microservice" }
eor-admin-microservice = { path = "../eor-admin-microservice" }
common-utils = { path = "../common-utils" }
image = "0.24.1"
