[package]
name = "contractor-management-microservice"
version = "1.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local crates
user-management-microservice = { path = "../user-management-microservice" }
eor-admin-microservice = { path = "../eor-admin-microservice" }
common-utils = { path = "../common-utils" }

# Remote crates
axum = { version = "0.5.1", features = ["headers"] }
dapr = "0.7.2"
dotenv = "0.15.0"
itertools = "0.10.3"
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_with = { version = "1.12.0", features = ["base64"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "decimal"] }
time = "0.2.27"
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.5.2"
tower = { version = "0.4.12", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.5", features = ["cors"] }
serde_json = "1.0.79"
uuid = { version = "0.8", features = ["serde", "v4"] }
lettre = "0.10.0-rc.5"
