[package]
name = "google_auth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
http-cache-reqwest = { version = "0.4.1", features = ["manager-moka"], default-features = false }
jsonwebtoken = "8.0.1"
once_cell = "1.10.0"
reqwest = "0.11.10"
reqwest-middleware = "0.1.5"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
