[package]
name = "user-management-microservice"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.4.4", features = ["headers", "multipart"] }
dapr = "0.7.2"
dotenv = "0.15.0"
email_address = "0.2.1"
jsonwebtoken = "8.0.1"
lettre = "0.10.0-rc.4"
magic = "0.13.0-alpha.3"
mime = "0.3.16"
once_cell = "1.9.0"
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["json"] }
rust-argon2 = "1.0.0"
rusty_ulid = { version = "1.0.0", features = ["ulid-generation-time", "serde"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
strum = { version = "0.23.0", features = ["derive"] }
time = { version = "0.3.7", features = ["serde", "parsing"] }
tokio = { version = "1.15.0", features = ["full"] }
tonic = "0.5.2"
tower = { version = "0.4.11", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.1", features = ["add-extension"] }
unicode-normalization = "0.1.19"

[features]
