[package]
name = "user-management-microservice"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "user_management_microservice_sdk"
path = "src/lib.rs"

[[bin]]
name = "user-management-microservice"
path = "src/main.rs"

[dependencies]
axum = { version = "0.4.8", features = ["headers", "multipart"] }
base64 = "0.13.0"
dapr = "0.7.2"
derive_builder = "0.10.2"
dotenv = "0.15.0"
email_address = "0.2.1"
http-cache-reqwest = { version = "0.3.0", features = ["manager-moka"], default-features = false }
image = "0.24.1"
jsonwebtoken = "8.0.1"
lettre = "0.10.0-rc.4"
mime = "0.3.16"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["json"] }
reqwest-middleware = "0.1.5"
rust-argon2 = "1.0.0"
rusty_ulid = { version = "1.0.0", features = ["ulid-generation-time", "serde"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
strum = { version = "0.24.0", features = ["derive"] }
time = { version = "0.3.7", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.5.2"
tower = { version = "0.4.12", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.4", features = ["add-extension"] }
unicode-normalization = "0.1.19"
